tests/should_fail/bad_block_comment.kt
fun bad_block() {
  var stuff: Int = 1
  /* Forgot to enclose the comment, whoops!
}
